--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="" id="qrImage" >
         </div>
         <button class="qrbutton" onclick="generateQR()"> Generate QR Code</button>
-        <footer><p>Testing Branch</p> <i>Copyright ©griffintechs.io -2024</i></footer>
+        <footer><p>Griffin Tech Solutions</p> <i>Copyright ©griffintechs.io -2024</i></footer>
 </div>
 
 
