Html code is now encripted

--- a/index.html
+++ b/index.html
@@ -1,44 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR CODE EDITOR</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="website icon" type="png" href="qr-scanner.svg">
-</head>
-<body>
-<div class="container">
-        <p>Enter your Text or URL</p>
-        <input class="text" placeholder="Text or URL" id="qrText">
-
-        <div id="imgBox">
-        <img src="" id="qrImage" >
-        </div>
-        <button class="qrbutton" onclick="generateQR()"> Generate QR Code</button>
-        <footer><p>Griffin Tech Solutions</p> <i>Copyright ©griffintechs.io -2024</i></footer>
-</div>
-
-
-<script>  
-
-    let imgBox = document.getElementById("imgBox")
-    let qrImage = document.getElementById("qrImage")
-    let qrText = document.getElementById("qrText")
-
-   
-    function generateQR(){
-    if(qrText.value.length > 0){
-    qrImage.src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
-    imgBox.classList.add("show-img");
-}else{
-    qrText.classList.add('error');
-    setTimeout(() => {
-     qrText.classList.remove('error');
-    }, 1000);
-}
-}
-
-</script>
-</body>
-</html>
+<Script Language='Javascript'>
+    <!-- HTML Encryption provided by iWEBTOOL.com -->
+    <!--
+    document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%0A%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%51%52%20%43%4F%44%45%20%45%44%49%54%4F%52%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%69%6E%64%65%78%2E%63%73%73%22%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%77%65%62%73%69%74%65%20%69%63%6F%6E%22%20%74%79%70%65%3D%22%70%6E%67%22%20%68%72%65%66%3D%22%71%72%2D%73%63%61%6E%6E%65%72%2E%73%76%67%22%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%6F%6E%74%61%69%6E%65%72%22%3E%0A%20%20%20%20%20%20%20%20%3C%70%3E%45%6E%74%65%72%20%79%6F%75%72%20%54%65%78%74%20%6F%72%20%55%52%4C%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%63%6C%61%73%73%3D%22%74%65%78%74%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%54%65%78%74%20%6F%72%20%55%52%4C%22%20%69%64%3D%22%71%72%54%65%78%74%22%3E%0A%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%69%64%3D%22%69%6D%67%42%6F%78%22%3E%0A%20%20%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%22%20%69%64%3D%22%71%72%49%6D%61%67%65%22%20%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%62%75%74%74%6F%6E%20%63%6C%61%73%73%3D%22%71%72%62%75%74%74%6F%6E%22%20%6F%6E%63%6C%69%63%6B%3D%22%67%65%6E%65%72%61%74%65%51%52%28%29%22%3E%20%47%65%6E%65%72%61%74%65%20%51%52%20%43%6F%64%65%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%20%20%20%20%20%20%3C%66%6F%6F%74%65%72%3E%3C%70%3E%47%72%69%66%66%69%6E%20%54%65%63%68%20%53%6F%6C%75%74%69%6F%6E%73%3C%2F%70%3E%20%3C%69%3E%43%6F%70%79%72%69%67%68%74%20%A9%67%72%69%66%66%69%6E%74%65%63%68%73%2E%69%6F%20%2D%32%30%32%34%3C%2F%69%3E%3C%2F%66%6F%6F%74%65%72%3E%0A%3C%2F%64%69%76%3E%0A%0A%0A%3C%73%63%72%69%70%74%3E%20%20%0A%0A%20%20%20%20%6C%65%74%20%69%6D%67%42%6F%78%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%69%6D%67%42%6F%78%22%29%0A%20%20%20%20%6C%65%74%20%71%72%49%6D%61%67%65%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%71%72%49%6D%61%67%65%22%29%0A%20%20%20%20%6C%65%74%20%71%72%54%65%78%74%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%22%71%72%54%65%78%74%22%29%0A%0A%20%20%20%0A%20%20%20%20%66%75%6E%63%74%69%6F%6E%20%67%65%6E%65%72%61%74%65%51%52%28%29%7B%0A%20%20%20%20%69%66%28%71%72%54%65%78%74%2E%76%61%6C%75%65%2E%6C%65%6E%67%74%68%20%3E%20%30%29%7B%0A%20%20%20%20%71%72%49%6D%61%67%65%2E%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%61%70%69%2E%71%72%73%65%72%76%65%72%2E%63%6F%6D%2F%76%31%2F%63%72%65%61%74%65%2D%71%72%2D%63%6F%64%65%2F%3F%73%69%7A%65%3D%31%35%30%78%31%35%30%26%64%61%74%61%3D%22%20%2B%20%71%72%54%65%78%74%2E%76%61%6C%75%65%3B%0A%20%20%20%20%69%6D%67%42%6F%78%2E%63%6C%61%73%73%4C%69%73%74%2E%61%64%64%28%22%73%68%6F%77%2D%69%6D%67%22%29%3B%0A%7D%65%6C%73%65%7B%0A%20%20%20%20%71%72%54%65%78%74%2E%63%6C%61%73%73%4C%69%73%74%2E%61%64%64%28%27%65%72%72%6F%72%27%29%3B%0A%20%20%20%20%73%65%74%54%69%6D%65%6F%75%74%28%28%29%20%3D%3E%20%7B%0A%20%20%20%20%20%71%72%54%65%78%74%2E%63%6C%61%73%73%4C%69%73%74%2E%72%65%6D%6F%76%65%28%27%65%72%72%6F%72%27%29%3B%0A%20%20%20%20%7D%2C%20%31%30%30%30%29%3B%0A%7D%0A%7D%0A%0A%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
+    //-->
+    </Script>
